@@ -1,3 +1,8 @@
+2003-01-29  Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-gz.c: Fix build
+	* rsvg-file-util.c: Remove GNOME VFS code.
+	
 2003-01-28  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg-gz.[ch]: New handle type, capable of reading SVGZ files.
